# comfyui_dagthomas

./: .gitignore  GROQ_MODELS_INFO.md  IMPORT_FIXES.md  MIGRATION_COMPLETE.md  MIGRATION_STATUS.md  MINICPM_IMPLEMENTATION.md  MINICPM_SETUP.md  PROMPT_ENHANCER_README.md  README.md  REFACTORING_PLAN.md  RENAME_COMPLETE.md  SEED_AND_GENERATOR_FEATURES.md  __init__.py  apnext.py  original_sdxl_utility_backup.py  pyproject.toml  requirements.txt  sd3_auto_prompter_workflow_example.json  sdxl_utility.py
.claude/: settings.local.json
.github/workflows/: publish.yml
concat/: create_prompt.py  output.json  output_old2.json  scrape_prompts.py
data/: additional_details.json  artform.json  artist.json  background.json  body_types.json  claude_models.json  clothing.json  composition.json  default_tags.json  device.json  digital_artform.json  gemini_models.json  gpt_models.json  grok_models.json  groq_models.json  hairstyles.json  lighting.json  photo_framing.json  photo_type.json  photographer.json  photography_styles.json  place.json  pose.json  qwenvl_models.json  roles.json
data/custom_prompts/: NerdyRodent-WF-Art-Critic-Prompt.txt  cloner.txt  cloner_concept_blender.txt  extractor.txt  follow.txt  gemini.txt  gemini_2_5_pro_images.txt  gemini_2_5_pro_ohwx.txt  (+36 more)
examples/: apnext_all_nodes.json  dagthomas_zim_random.json
nodes/: __init__.py
prompts/: A close-up movie still of a young woman with a mix.txt  A surreal movie still featuring a vibrant green tr.txt  prompt_20240804_001736.txt
utils/: __init__.py  constants.py  image_utils.py  update_groq_models.py
(+245 files in other folders)
